fixed card spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0 5px;
+    margin: 0 3px;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #84a98c;
